--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 </head>
 <body>
 
-    <h1 class="usul-ad-deen-title">Usul-Ad-Deen</h1>
-
     <!-- 📌 Navigationsmenü -->
     <nav class="menu">
         <button class="menu-button">☰</button>
@@ -34,6 +32,7 @@
 
     <!-- 📌 Header-Bereich mit Uhrzeit, Datum & Gebetsinfo -->
     <div class="top-info">
+        <h1 class="app-title">Usul ad-Deen</h1>
         <h2 class="startseite-text">Startseite</h2>
         <div class="header-info">
             <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
@@ -45,50 +44,53 @@
 
     <main>
         <div class="container">
+            <!-- 📌 Gebetszeiten -->
             <div class="box">
                 <h2>Gebetszeiten</h2>
-                <p>Ihr Standort: <span id="stadt-name">Unbekannt. Bitte manuell wählen.</span></p>
-                <select id="stadt-auswahl"></select>
+                <p>Ihr Standort: <span id="stadtname">Unbekannt. Bitte manuell wählen.</span></p>
+                <select id="stadtauswahl"></select>
                 <table>
                     <tr><th>Gebet</th><th>Uhrzeit</th><th>Countdown</th></tr>
                     <tr><td><strong>Imsak</strong></td><td id="imsak">00:00</td><td id="imsak-countdown">00:00:00</td></tr>
                     <tr><td><strong>Fajr</strong></td><td id="fajr">00:00</td><td id="fajr-countdown">00:00:00</td></tr>
                     <tr><td>Shuruk</td><td id="shuruk">00:00</td><td id="shuruk-countdown">00:00:00</td></tr>
                     <tr><td><strong>Dhuhr</strong></td><td id="dhuhr">00:00</td><td id="dhuhr-countdown">00:00:00</td></tr>
-                     <tr>
-                        <td><strong>Asr</strong> <br> 
-                            <small class="asr-hinweis"><a href="beiträge/asr-zeit.html">🔗 Beachtet bitte die Regelungen zum Ende des Asr-Gebets (hier)</a></small>
-                        </td>
+                    <tr>
+                        <td><strong>Asr</strong></td>
                         <td id="asr">00:00</td>
                         <td id="asr-countdown">00:00:00</td>
                     </tr>
+                    <tr>
+                        <td colspan="3" class="asr-hinweis">
+                            Bitte beachtet die <a href="beiträge.html#asr-regelungen" class="asr-link">Regelungen zum Ende des Asr-Gebets</a>.
+                        </td>
+                    </tr>
                     <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td><td id="maghrib-countdown">00:00:00</td></tr>
                     <tr><td><strong>Isha</strong></td><td id="isha">00:00</td><td id="isha-countdown">00:00:00</td></tr>
-                    <tr><td>Sunnah-Gebet: Duha</td><td id="duha">Lädt...</td><td id="duha-countdown">00:00:00</td></tr>
-                    <tr><td>Sunnah-Gebet: Nachtgebet</td><td id="nachtgebet">Lädt...</td><td id="nachtgebet-countdown">00:00:00</td></tr>
-                    <tr><td>Sunnah-Gebet: Nachtgebet - Letztes Drittel</td><td id="nachtgebet-letztes-drittel">Lädt...</td><td id="nachtgebet-letztes-drittel-countdown">00:00:00</td></tr>
+                    <tr><td>Islamische Mitternacht</td><td id="mitternacht">00:00</td><td id="mitternacht-countdown">00:00:00</td></tr>
+                    <tr><td>Letztes Drittel der Nacht</td><td id="letztes-drittel">00:00</td><td id="letztes-drittel-countdown">00:00:00</td></tr>
                 </table>
             </div>
-            <div class="container">
-    <!-- 📌 Islamische Feiertage -->
-    <div class="box">
-        <h2>Islamische Feiertage & Countdown</h2>
-        <table>
-            <tr><th>Islamischer Tag</th><th>Datum</th><th>Verbleibende Zeit</th></tr>
-            <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown">Lädt...</td></tr>
-            <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown">Lädt...</td></tr>
-            <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown">Lädt...</td></tr>
-            <tr><td>Arafah</td><td>05.06.2025</td><td id="arafah-countdown">Lädt...</td></tr>
-            <tr><td>Eid al-Adha</td><td>06.06.2025</td><td id="adha-countdown">Lädt...</td></tr>
-            <tr><td>Islamisches Neujahr</td><td>26.06.2025</td><td id="neujahr-countdown">Lädt...</td></tr>
-            <tr><td>Ashura</td><td>05.07.2025</td><td id="ashura-countdown">Lädt...</td></tr>
-            <tr><td>Isra' und Mi'raj</td><td>16.01.2026</td><td id="isra-countdown">Lädt...</td></tr>
-        </table>
-    </div>
-</div>
+
+            <!-- 📌 Islamische Feiertage -->
+            <div class="box">
+                <h2>Islamische Feiertage & Countdown</h2>
+                <table>
+                    <tr><th>Islamischer Tag</th><th>Datum</th><th>Verbleibende Zeit</th></tr>
+                    <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown">Lädt...</td></tr>
+                    <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown">Lädt...</td></tr>
+                    <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown">Lädt...</td></tr>
+                    <tr><td>Arafah</td><td>05.06.2025</td><td id="arafah-countdown">Lädt...</td></tr>
+                    <tr><td>Eid al-Adha</td><td>06.06.2025</td><td id="adha-countdown">Lädt...</td></tr>
+                    <tr><td>Islamisches Neujahr</td><td>26.06.2025</td><td id="neujahr-countdown">Lädt...</td></tr>
+                    <tr><td>Ashura</td><td>05.07.2025</td><td id="ashura-countdown">Lädt...</td></tr>
+                    <tr><td>Isra' und Mi'raj</td><td>16.01.2026</td><td id="isra-countdown">Lädt...</td></tr>
+                </table>
+            </div>
         </div>
 
-        <div class="container hadith-dua-container">
+        <div class="container">
+            <!-- 📌 Hadith & Dua -->
             <div class="box">
                 <h2>Hadith des Tages</h2>
                 <p id="hadith-arabisch">Lädt...</p>
@@ -102,7 +104,7 @@
                 <p id="dua-arabisch">Lädt...</p>
                 <p id="dua-trans">Lädt...</p>
                 <p id="dua-deutsch">Lädt...</p>
-                <p><strong>Quelle und Authentizität:</strong> <span id="dua-quelle">Lädt...</span></p>
+                <p><strong>Quelle:</strong> <span id="dua-quelle">Lädt...</span></p>
             </div>
         </div>
     </main>
