--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
             <!-- 📌 Gebetszeiten -->
             <div class="box">
                 <h2>Gebetszeiten</h2>
-                <p>Ihr Standort: <span id="stadtname">Unbekannt. Bitte manuell wählen.</span></p>
-                <select id="stadtauswahl"></select>
+                <p>Ihr Standort: <span id="stadt-name">Unbekannt. Bitte manuell wählen.</span></p>
+                <select id="stadt-auswahl"></select>
                 <table>
                     <tr><th>Gebet</th><th>Uhrzeit</th><th>Countdown</th></tr>
                     <tr><td><strong>Imsak</strong></td><td id="imsak">00:00</td><td id="imsak-countdown">00:00:00</td></tr>
