--- a/index.html
+++ b/index.html
@@ -69,7 +69,13 @@
                     <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td><td id="maghrib-countdown">00:00:00</td></tr>
                     <tr><td><strong>Isha</strong></td><td id="isha">00:00</td><td id="isha-countdown">00:00:00</td></tr>
                     <tr><td>Islamische Mitternacht</td><td id="mitternacht">00:00</td><td id="mitternacht-countdown">00:00:00</td></tr>
-                    <tr><td>Letztes Drittel der Nacht</td><td id="letztes-drittel">00:00</td><td id="letztes-drittel-countdown">00:00:00</td></tr>
+                    <td colspan="3" class="asr-hinweis">
+                           Sunnah Gebete:  
+                    </td>
+                    <tr><td> Sunnah: Duha</td><td id="duha">00:00</td><td id="duha-countdown">00:00:00</td></tr>
+                    <tr><td> Sunnah: Nachtgebet</td><td id="nachtgebet">00:00</td><td id="nachtgebet-countdown">00:00:00</td></tr>
+                 <tr><td>Sunnah: Letztes Drittel der Nacht</td><td id="nachtgebet-letztes-drittel">00:00</td><td id="nachtgebet-letztes-drittel-countdown">00:00:00</td></tr>
+                    
                 </table>
             </div>
 
