--- a/index.html
+++ b/index.html
@@ -82,6 +82,7 @@
             <!-- 📌 Islamische Feiertage -->
             <div class="box">
                 <h2>Islamische Feiertage & Countdown</h2>
+                <p> Bitte beachtet, dass islamisch der Tag bereits mit Maghrib des Vortages beginnt. Außerdem beginnt der Monat mit der Mondsichtung, weshalb es zu Verschiebungen kommen kann und ALLAH swt weiß es am Besten.</p>
                 <table>
                     <tr><th>Islamischer Tag</th><th>Datum</th><th>Verbleibende Zeit</th></tr>
                     <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown">Lädt...</td></tr>
