--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="header-info">
             <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
             <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
-            <p>Nächstes Gebet: <span id="next-prayer">Lädt...</span> (in: <span id="prayer-countdown">00:00</span>)</p>
-            <p>Aktuelles Gebet: <span id="current-prayer">Lädt...</span> (verbleibend: <span id="current-prayer-countdown">00:00</span>)</p>
+           <p>Nächstes Gebet: <span id="next-prayer">Lädt...</span> (<span id="next-prayer-time">--:--</span>; in: <span id="next-prayer-countdown">--:--</span>)</p>
+<p>Aktuelles Gebet: <span id="current-prayer">Lädt...</span> (<span id="current-prayer-time">--:--</span>; verbleibend: <span id="current-prayer-countdown">--:--</span>)</p>
         </div>
     </div>
 
@@ -72,9 +72,9 @@
                     <td colspan="3" class="asr-hinweis">
                            Sunnah Gebete:  
                     </td>
-                    <tr><td> Sunnah: Duha</td><td id="duha">00:00</td><td id="duha-countdown">00:00:00</td></tr>
-                    <tr><td> Sunnah: Nachtgebet</td><td id="nachtgebet">00:00</td><td id="nachtgebet-countdown">00:00:00</td></tr>
-                 <tr><td>Sunnah: Letztes Drittel der Nacht</td><td id="nachtgebet-letztes-drittel">00:00</td><td id="nachtgebet-letztes-drittel-countdown">00:00:00</td></tr>
+                    <tr><td>Duha</td><td id="duha">00:00</td><td id="duha-countdown">00:00:00</td></tr>
+                    <tr><td>Nachtgebet</td><td id="nachtgebet">00:00</td><td id="nachtgebet-countdown">00:00:00</td></tr>
+                 <tr><td>Letztes Drittel der Nacht</td><td id="nachtgebet-letztes-drittel">00:00</td><td id="nachtgebet-letztes-drittel-countdown">00:00:00</td></tr>
                     
                 </table>
             </div>
