--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <div class="header-info">
             <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
             <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
-           <p><span id="next-prayer">Lädt...</span> (<span id="next-prayer-time">--:--</span>;<span id="next-prayer-countdown"></span>)</p>
-<p><span id="current-prayer">Lädt...</span> (<span id="current-prayer-time">--:--</span>; <span id="current-prayer-countdown"></span>)</p>
+           <p><span id="next-prayer">Lädt...</span> (<span id="next-prayer-time">--:--</span>;<span id="next-prayer-countdown" class="nextprayer-bold"></span>)</p>
+<p><span id="current-prayer">Lädt...</span> (<span id="current-prayer-time">--:--</span>; <span id="current-prayer-countdown" class="nextprayer-bold"></span>)</p>
         </div>
     </div>
 
