--- a/index.html
+++ b/index.html
@@ -52,29 +52,29 @@
                 <select id="stadt-auswahl"></select>
                 <table>
                     <tr><th>Gebet</th><th>Uhrzeit</th><th>Countdown</th></tr>
-                    <tr><td><strong>Imsak</strong></td><td id="imsak">00:00</td><td id="imsak-countdown">00:00:00</td></tr>
-                    <tr><td><strong>Fajr</strong></td><td id="fajr">00:00</td><td id="fajr-countdown">00:00:00</td></tr>
-                    <tr><td>Shuruk</td><td id="shuruk">00:00</td><td id="shuruk-countdown">00:00:00</td></tr>
-                    <tr><td><strong>Dhuhr</strong></td><td id="dhuhr">00:00</td><td id="dhuhr-countdown">00:00:00</td></tr>
+                   
+                    <tr><td><strong>Fajr (Fastenbeginn)</strong></td><td id="fajr">00:00</td><td id="fajr-countdown" class="nextprayer-bold">00:00:00</td></tr>
+                    <tr><td>Shuruk</td><td id="shuruk">00:00</td><td id="shuruk-countdown" class="nextprayer-bold">00:00:00</td></tr>
+                    <tr><td><strong>Dhuhr</strong></td><td id="dhuhr">00:00</td><td id="dhuhr-countdown" class="nextprayer-bold">00:00:00</td></tr>
                     <tr>
                         <td><strong>Asr</strong></td>
                         <td id="asr">00:00</td>
-                        <td id="asr-countdown">00:00:00</td>
+                        <td id="asr-countdown" class="nextprayer-bold">00:00:00</td>
                     </tr>
                     <tr>
                         <td colspan="3" class="asr-hinweis">
                             Bitte beachtet die <a href="beiträge.html#asr-regelungen" class="asr-link">Regelungen zum Ende des Asr-Gebets</a>.
                         </td>
                     </tr>
-                    <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td><td id="maghrib-countdown">00:00:00</td></tr>
-                    <tr><td><strong>Isha</strong></td><td id="isha">00:00</td><td id="isha-countdown">00:00:00</td></tr>
-                    <tr><td>Islamische Mitternacht</td><td id="mitternacht">00:00</td><td id="mitternacht-countdown">00:00:00</td></tr>
+                    <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td><td id="maghrib-countdown" class="nextprayer-bold">00:00:00</td></tr>
+                    <tr><td><strong>Isha</strong></td><td id="isha">00:00</td><td id="isha-countdown" class="nextprayer-bold">00:00:00</td></tr>
+                    <tr><td>Islamische Mitternacht</td><td id="mitternacht">00:00</td><td id="mitternacht-countdown" class="nextprayer-bold">00:00:00</td></tr>
                     <td colspan="3" class="asr-hinweis">
                            Sunnah Gebete:  
                     </td>
-                    <tr><td>Duha</td><td id="duha">00:00</td><td id="duha-countdown">00:00:00</td></tr>
-                    <tr><td>Nachtgebet</td><td id="nachtgebet">00:00</td><td id="nachtgebet-countdown">00:00:00</td></tr>
-                 <tr><td>Letztes Drittel der Nacht</td><td id="nachtgebet-letztes-drittel">00:00</td><td id="nachtgebet-letztes-drittel-countdown">00:00:00</td></tr>
+                    <tr><td>Duha</td><td id="duha">00:00</td><td id="duha-countdown" class="nextprayer-bold">00:00:00</td></tr>
+                    <tr><td>Nachtgebet</td><td id="nachtgebet">00:00</td><td id="nachtgebet-countdown" class="nextprayer-bold">00:00:00</td></tr>
+                 <tr><td>Letztes Drittel der Nacht</td><td id="nachtgebet-letztes-drittel">00:00</td><td id="nachtgebet-letztes-drittel-countdown" class="nextprayer-bold">00:00:00</td></tr>
                     
                 </table>
             </div>
@@ -85,14 +85,14 @@
                 <p> Bitte beachtet, dass islamisch der Tag bereits mit Maghrib des Vortages beginnt. Außerdem beginnt der Monat mit der Mondsichtung, weshalb es zu Verschiebungen kommen kann und ALLAH swt weiß es am Besten.</p>
                 <table>
                     <tr><th>Islamischer Tag</th><th>Datum</th><th>Verbleibende Zeit</th></tr>
-                    <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown">Lädt...</td></tr>
-                    <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown">Lädt...</td></tr>
-                    <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown">Lädt...</td></tr>
-                    <tr><td>Arafah</td><td>05.06.2025</td><td id="arafah-countdown">Lädt...</td></tr>
-                    <tr><td>Eid al-Adha</td><td>06.06.2025</td><td id="adha-countdown">Lädt...</td></tr>
-                    <tr><td>Islamisches Neujahr</td><td>26.06.2025</td><td id="neujahr-countdown">Lädt...</td></tr>
-                    <tr><td>Ashura</td><td>05.07.2025</td><td id="ashura-countdown">Lädt...</td></tr>
-                    <tr><td>Isra' und Mi'raj</td><td>16.01.2026</td><td id="isra-countdown">Lädt...</td></tr>
+                    <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown" class="nextprayer-bold">Lädt...</td></tr>
+                    <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown" class="nextprayer-bold">Lädt...</td></tr>
+                    <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown" class="nextprayer-bold">Lädt...</td></tr>
+                    <tr><td>Arafah</td><td>05.06.2025</td><td id="arafah-countdown" class="nextprayer-bold">Lädt...</td></tr>
+                    <tr><td>Eid al-Adha</td><td>06.06.2025</td><td id="adha-countdown" class="nextprayer-bold">Lädt...</td></tr>
+                    <tr><td>Islamisches Neujahr</td><td>26.06.2025</td><td id="neujahr-countdown" class="nextprayer-bold">Lädt...</td></tr>
+                    <tr><td>Ashura</td><td>05.07.2025</td><td id="ashura-countdown" class="nextprayer-bold">Lädt...</td></tr>
+                    <tr><td>Isra' und Mi'raj</td><td>16.01.2026</td><td id="isra-countdown" class="nextprayer-bold">Lädt...</td></tr>
                 </table>
             </div>
         </div>
