--- a/index.html
+++ b/index.html
@@ -11,9 +11,11 @@
 <body>
 
  <h1 class="app-title">Usul ad-Deen</h1>
-        <h2 class="startseite-text">Startseite</h2>
+        
     <!-- 📌 Header-Bereich mit Uhrzeit, Datum & Gebetsinfo -->
     <div class="top-info">
+        <img src="icons/icon-192x192.png" alt="App Icon" class="app-icon">
+        <h2 class="startseite-text">Startseite</h2>
         <div class="header-info">
             <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
             <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
