--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
         
     <!-- 📌 Header-Bereich mit Uhrzeit, Datum & Gebetsinfo -->
     <div class="top-info">
-        <img src="icons/icon-192x192.png" alt="App Icon" class="app-icon">
+        <a href="index.html">
+        <img src="icons/icon-192x192.png" alt="App Icon" class="app-icon"></a>
+        
         <h2 class="startseite-text">Startseite</h2>
         <div class="header-info">
             <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
