--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <p>Ihr Standort: <span id="stadt-name">Unbekannt. Bitte manuell wählen.</span></p>
                 <select id="stadt-auswahl"></select>
                 <table>
-                    <tr><th>Gebet</th><th>Uhrzeit</th><th>Countdown</th></tr>
+                    <tr><th>Gebet</th><th>Uhrzeit</th><th>Beginnt in:</th></tr>
                    
                     <tr><td><strong>Fajr (Fastenbeginn)</strong></td><td id="fajr">00:00</td><td id="fajr-countdown" class="nextprayer-bold">00:00:00</td></tr>
                     <tr><td>Shuruk</td><td id="shuruk">00:00</td><td id="shuruk-countdown" class="nextprayer-bold">00:00:00</td></tr>
@@ -82,10 +82,10 @@
 
             <!-- 📌 Islamische Feiertage -->
             <div class="box">
-                <h2>Islamische Feiertage & Countdown</h2>
+                <h2>Islamische Tage</h2>
                 <p> Bitte beachtet, dass islamisch der Tag bereits mit Maghrib des Vortages beginnt. Außerdem beginnt der Monat mit der Mondsichtung, weshalb es zu Verschiebungen kommen kann und ALLAH swt weiß es am Besten.</p>
                 <table>
-                    <tr><th>Islamischer Tag</th><th>Datum</th><th>Verbleibende Zeit</th></tr>
+                    <tr><th>Islamischer Tag</th><th>Datum</th><th>Beginnt in:</th></tr>
                     <tr><td>Ramadan</td><td>01.03.2025</td><td id="ramadan-countdown" class="nextprayer-bold">Lädt...</td></tr>
                     <tr><td>Eid al-Fitr</td><td>30.03.2025</td><td id="fitr-countdown" class="nextprayer-bold">Lädt...</td></tr>
                     <tr><td>Hajj</td><td>04.06.2025</td><td id="hajj-countdown" class="nextprayer-bold">Lädt...</td></tr>
