--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                     </td>
                     <tr><td>Duha</td><td id="duha">00:00</td><td id="duha-countdown" class="nextprayer-bold">00:00:00</td></tr>
                     <tr><td>Nachtgebet</td><td id="nachtgebet">00:00</td><td id="nachtgebet-countdown" class="nextprayer-bold">00:00:00</td></tr>
-                 <tr><td>Letztes Drittel der Nacht</td><td id="nachtgebet-letztes-drittel">00:00</td><td id="nachtgebet-letztes-drittel-countdown" class="nextprayer-bold">00:00:00</td></tr>
+                 <tr><td>Letztes Drittel der Nacht</td><td id="letztes-drittel">00:00</td><td id="letztes-drittel-countdown" class="nextprayer-bold">00:00:00</td></tr>
                     
                 </table>
             </div>
