--- a/index.html
+++ b/index.html
@@ -19,9 +19,14 @@
         <div class="header-info">
             <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
             <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
-           <p><span id="next-prayer" class="nextprayer-bold">Lädt...</span> <span id="next-prayer-time"></span><span id="next-prayer-countdown" class="nextprayer-bold"></span></p>
-<p><span id="current-prayer" class="nextprayer-bold">Lädt...</span> <span id="current-prayer-time"></span> <span id="current-prayer-countdown" class="nextprayer-bold"></span></p>
-        </div>
+           <p><span id="next-prayer" class="nextprayer-bold">Lädt...</span> 
+<span id="next-prayer-time"></span>
+<span id="next-prayer-countdown" class="nextprayer-bold"></span></p>
+
+<p><span id="current-prayer" class="nextprayer-bold">Lädt...</span> 
+<span id="current-prayer-time"></span> 
+<span id="current-prayer-countdown" class="nextprayer-bold"></span></p>
+    </div>
     </div>
 
      <!-- 📌 Navigationsmenü -->
@@ -74,9 +79,9 @@
                            Sunnah Gebete:  
                     </td>
                     <tr><td>Duha</td><td id="duha">00:00</td><td id="duha-countdown" class="nextprayer-bold">00:00:00</td></tr>
-                    <tr><td>Nachtgebet</td><td id="nachtgebet">00:00</td><td id="nachtgebet-countdown" class="nextprayer-bold">00:00:00</td></tr>
-                 <tr><td>Letztes Drittel der Nacht</td><td id="letztes-drittel">00:00</td><td id="letztes-drittel-countdown" class="nextprayer-bold">00:00:00</td></tr>
-                    
+    <tr><td>Nachtgebet</td><td id="nachtgebet">00:00</td><td id="nachtgebet-countdown" class="nextprayer-bold">00:00:00</td></tr>
+    <tr><td>Letztes Drittel der Nacht</td><td id="letztes-drittel">00:00</td><td id="letztes-drittel-countdown" class="nextprayer-bold">00:00:00</td></tr>
+
                 </table>
             </div>
 
