--- a/index.html
+++ b/index.html
@@ -53,9 +53,13 @@
         <div class="container">
             <!-- 📌 Gebetszeiten -->
             <div class="box">
-                <h2>Gebetszeiten</h2>
-                <p>Ihr Standort: <span id="stadt-name">Unbekannt. Bitte manuell wählen.</span></p>
+               <h2><a href="gebetszeiten.html">Gebetszeiten</a></h2> 
+                <p id="stadt-name"></p>
+                <div id="stadt-auswahl-container" style="display: none;">
+                <label for="stadt-auswahl"><strong>Oder Stadt auswählen:</strong></label>
                 <select id="stadt-auswahl"></select>
+            </div>
+
                 <table>
                     <tr><th>Gebet</th><th>Uhrzeit</th><th>Beginnt in:</th></tr>
                    
