--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
                             Bitte beachtet die <a href="beiträge.html#asr-regelungen" class="asr-link">Regelungen zum Ende des Asr-Gebets</a>.
                         </td>
                     </tr>
-                    <tr><td><strong>Maghrib</strong></td><td id="maghrib">00:00</td><td id="maghrib-countdown" class="nextprayer-bold">00:00:00</td></tr>
+                    <tr><td><strong>Maghrib (Fastenbrechen/Iftar)</strong></td><td id="maghrib">00:00</td><td id="maghrib-countdown" class="nextprayer-bold">00:00:00</td></tr>
                     <tr><td><strong>Isha</strong></td><td id="isha">00:00</td><td id="isha-countdown" class="nextprayer-bold">00:00:00</td></tr>
                     <tr><td>Islamische Mitternacht</td><td id="mitternacht">00:00</td><td id="mitternacht-countdown" class="nextprayer-bold">00:00:00</td></tr>
                     <td colspan="3" class="asr-hinweis">
