index.html aktualisieren

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <div class="box">
                <h2><a href="gebetszeiten.html">Gebetszeiten</a></h2> 
                 <p id="stadt-name"></p>
-                <div id="stadt-auswahl-container" style="display: none;">
+                <div id="stadt-container" style="display: none;">
                 <select id="stadt-auswahl"></select>
             </div>
 
