--- a/index.html
+++ b/index.html
@@ -50,14 +50,21 @@
     </nav>
 
     <main>
-        <div class="container">
-            <!-- 📌 Gebetszeiten -->
-            <div class="box">
-               <h2><a href="gebetszeiten.html">Gebetszeiten</a></h2> 
-                <p id="stadt-name"></p>
-                <div id="stadt-container" style="display: none;">
+    
+                <div class="container">
+    <!-- 📌 Gebetszeiten -->
+    <div class="box">
+        <h2><a href="gebetszeiten.html">Gebetszeiten</a></h2> 
+        <p id="stadt-name"></p>
+
+        <div id="stadt-container">
+            <div class="stadt-dropdown">
                 <select id="stadt-auswahl"></select>
             </div>
+        </div>
+    </div>
+</div>
+
 
                 <table>
                     <tr><th>Gebet</th><th>Uhrzeit</th><th>Beginnt in:</th></tr>
