--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             </div>
         </div>
                 <table>
-                    <tr><th>Gebet</th><th>Uhrzeit</th><th>Beginnt in (Stunden:Minuten):</th></tr>
+                    <tr><th>Gebet</th><th>Uhrzeit</th><th>Beginnt in (Std:Min):</th></tr>
                    
                     <tr><td><strong>Fajr (Fastenbeginn)</strong></td><td id="fajr">00:00</td><td id="fajr-countdown" class="nextprayer-bold">00:00:00</td></tr>
                     <tr><td>Shuruk</td><td id="shuruk">00:00</td><td id="shuruk-countdown" class="nextprayer-bold">00:00:00</td></tr>
