--- a/bücher.html
+++ b/bücher.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="de">
 <head>
@@ -9,20 +8,73 @@
     <script defer src="bücher.js"></script>
 </head>
 <body>
-    <header>
-        <h1>Usul ad-Deen</h1>
-        <h2>Bücher</h2>
-        <nav>
-            <ul>
-                <li><a href="index.html">Start</a></li>
-                <li><a href="hadith.html">Hadithsammlungen</a></li>
-                <li><a href="dua.html">Bittgebete</a></li>
-                <li><a href="beiträge.html">Beiträge</a></li>
-                <li><a href="bücher.html">Bücher</a></li>
-                 <li><a href="login.html">Login</a></li>
-            </ul>
-        </nav>
-    </header>
+
+ <h1 class="app-title">Usul ad-Deen</h1>
+         <a href="index.html">
+        <img src="icons/icon-192x192.png" alt="App Icon" class="app-icon"></a>
+    <!-- 📌 Header-Bereich mit Uhrzeit, Datum & Gebetsinfo -->
+    <div class="top-info">
+        <h2 class="startseite-text">Bücher</h2>
+        <div class="header-info">
+            <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
+            <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
+           <p><span id="next-prayer" class="nextprayer-bold">Lädt...</span> 
+<span id="next-prayer-time"></span>
+<span id="next-prayer-countdown" class="nextprayer-bold"></span></p>
+
+<p><span id="current-prayer" class="nextprayer-bold">Lädt...</span> 
+<span id="current-prayer-time"></span> 
+<span id="current-prayer-countdown" class="nextprayer-bold"></span></p>
+    </div>
+    </div>
+
+     <!-- 📌 Navigationsmenü -->
+    <nav class="menu">
+        <button class="menu-button">☰</button>
+        <ul class="menu-list">
+            <li><a href="index.html">Startseite</a></li>
+            <li><a href="beiträge.html">Beiträge</a></li>
+            <li><a href="bücher.html">Bücher</a></li>
+            <li><a href="hadith.html">Hadithsammlung</a></li>
+            <li><a href="dua.html">Bittgebete</a></li>
+            <li><a href="gebetszeiten.html">Gebetszeiten</a></li>
+            <li><a href="kalender.html">Islamischer Kalender</a></li>
+            <li><a href="login.html">Login/Registrierung</a></li>
+            <li><a href="über-uns.html">Über uns</a></li>
+            <li><a href="kontakt.html">Kontakt</a></li>
+            <li><a href="impressum.html">Impressum & Datenschutz</a></li>
+            <li><a href="app-teilen.html">App teilen</a></li>
+            <li><a href="#" id="dark-mode-toggle">Dark Mode</a></li>
+        </ul>
+    </nav>
+
+    <main>
+    
+                <div class="container">
+                    <div class="box">
+                     <main>
+        <h2>Verfügbare Bücher</h2>
+        <ul id="buch-liste">
+            <!-- Bücher werden hier geladen -->
+        </ul>
+    </main>
+                </div>
+
+                    <div class="box">
+    <section id="ebook-reader">
+        <h2>Lesemodus</h2>
+        <iframe id="buch-iframe" src="" width="100%" height="600px"></iframe>
+    </section>
+ </div>
+                     </div>
+        
+
+    <footer>
+        <p>&copy; 2025 Usul ad-Deen</p>
+    </footer>
+
+</body>
+</html>
 
     <main>
         <h2>Verfügbare Bücher</h2>
