--- a/bücher.html
+++ b/bücher.html
@@ -25,6 +25,10 @@
 <p><span id="current-prayer" class="nextprayer-bold">Lädt...</span> 
 <span id="current-prayer-time"></span> 
 <span id="current-prayer-countdown" class="nextprayer-bold"></span></p>
+            <p id="stadt-name"></p>
+        <div id="stadt-container">
+            <div class="stadt-dropdown">
+                <select id="stadt-auswahl"></select>
     </div>
     </div>
 
