--- a/bücher.html
+++ b/bücher.html
@@ -18,20 +18,18 @@
         <div class="header-info">
             <p><span id="datum">Lädt...</span> | <span id="uhrzeit">Berlin: 00:00</span></p>
             <p><span id="islamisches-datum">Lädt...</span> | <span id="mekka-uhrzeit">Mekka: 00:00</span></p>
-           <p><span id="next-prayer" class="nextprayer-bold">Lädt...</span> 
-<span id="next-prayer-time"></span>
-<span id="next-prayer-countdown" class="nextprayer-bold"></span></p>
-
-<p><span id="current-prayer" class="nextprayer-bold">Lädt...</span> 
-<span id="current-prayer-time"></span> 
-<span id="current-prayer-countdown" class="nextprayer-bold"></span></p>
+           <p><span id="next-prayer" class="nextprayer-bold">Lädt...</span> <span id="next-prayer-time"></span><span id="next-prayer-countdown" class="nextprayer-bold"></span></p> 
+            <p><span id="current-prayer" class="nextprayer-bold">Lädt...</span> <span id="current-prayer-time"></span> <span id="current-prayer-countdown" class="nextprayer-bold"></span></p>
             <p id="stadt-name"></p>
         <div id="stadt-container">
             <div class="stadt-dropdown">
                 <select id="stadt-auswahl"></select>
     </div>
     </div>
+            </div>
+        </div>
 
+           
      <!-- 📌 Navigationsmenü -->
     <nav class="menu">
         <button class="menu-button">☰</button>
