--- a/bücher.html
+++ b/bücher.html
@@ -64,9 +64,10 @@
 
                     <div class="box">
     <section id="ebook-reader">
-        <h2>Lesemodus</h2>
-        <iframe id="buch-iframe" src="" width="100%" height="600px"></iframe>
-    </section>
+            <h2>Lesemodus</h2>
+            <iframe id="buch-iframe" src="" width="100%" height="600px" style="display: none;"></iframe>
+        </section>
+
  </div>
                      </div>
         
