--- a/bücher.html
+++ b/bücher.html
@@ -50,17 +50,16 @@
         </ul>
     </nav>
 
-    <main>
-    
-                <div class="container">
-                    <div class="box">
-                     <main>
-        <h2>Verfügbare Bücher</h2>
-        <ul id="buch-liste">
-            <!-- Bücher werden hier geladen -->
-        </ul>
-    </main>
-                </div>
+ 
+         <main>
+  <div class="container">
+    <div class="box" style="width: 100%;">
+      <input type="text" id="buch-suche" placeholder="🔍 Nach Titel oder Autor suchen..." class="buch-suchfeld">
+      <div id="buecher-grid" class="buch-grid"></div>
+    </div>
+  </div>
+</main>
+
 
                     <div class="box">
     <section id="ebook-reader">
