--- a/epub-reader.html
+++ b/epub-reader.html
@@ -31,5 +31,12 @@
 <body>
 
 <div id="controls">
-  <button onclick="buchVor()">➡️
+  <button onclick="buchZurück()">⬅️</button>
+  <button onclick="buchVor()">➡️</button>
+  <button onclick="window.close()">✖️ Schließen</button>
+</div>
 
+<div id="viewer"></div>
+
+</body>
+</html>
