--- a/pdf-reader.html
+++ b/pdf-reader.html
@@ -8,33 +8,65 @@
     body {
       margin: 0;
       font-family: sans-serif;
+      background: #f9f9f9;
+    }
+
+    header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 10px 16px;
+      background: #1a1a1a;
+      color: white;
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 18px;
+    }
+
+    #controls {
+      display: flex;
+      gap: 8px;
+    }
+
+    button {
+      background: #ffffff;
+      border: 1px solid #ccc;
+      padding: 6px 10px;
+      border-radius: 4px;
+      cursor: pointer;
+    }
+
+    button:hover {
       background: #f0f0f0;
     }
+
     #viewer {
-      width: 100vw;
-      height: 100vh;
+      width: 100%;
+      height: calc(100vh - 50px); /* passt sich der Höhe abzüglich Header an */
       border: none;
+      display: block;
     }
-    #controls {
-      position: fixed;
-      top: 10px;
-      right: 10px;
-      z-index: 100;
-    }
-    button {
-      padding: 8px 12px;
-      margin: 4px;
+
+    @media (max-width: 600px) {
+      header h1 {
+        font-size: 16px;
+      }
     }
   </style>
 </head>
 <body>
 
-<div id="controls">
-  <button onclick="window.history.back()">⬅️ Zurück</button>
-  <button onclick="window.close()">✖️ Schließen</button>
-</div>
+<header>
+  <h1>📖 PDF Reader</h1>
+  <div id="controls">
+    <button onclick="window.history.back()">⬅️ Zurück</button>
+    <button onclick="window.close()">✖️ Schließen</button>
+  </div>
+</header>
 
-<iframe id="viewer"></iframe>
+<iframe id="viewer" allow="fullscreen" sandbox="allow-scripts allow-same-origin allow-forms allow-popups"></iframe>
 
 <script>
   document.addEventListener("DOMContentLoaded", () => {
@@ -43,10 +75,37 @@
 
     if (!pdfPfad) {
       document.body.innerHTML = "<p style='text-align:center; margin-top:2em;'>❌ Keine PDF-Datei angegeben.</p>";
-    } else {
-      const iframe = document.getElementById("viewer");
-      iframe.src = pdfPfad;
+      return;
     }
+
+    const iframe = document.getElementById("viewer");
+
+    // 🔖 Fortschritt aus LocalStorage laden
+    const scrollKey = `scrollPos-${pdfPfad}`;
+    const gespeicherterScroll = localStorage.getItem(scrollKey);
+
+    iframe.src = pdfPfad;
+
+    // 📌 Fortschritt speichern (nur beim selben Ursprung möglich!)
+    iframe.addEventListener("load", () => {
+      try {
+        const doc = iframe.contentWindow.document;
+        if (!doc || !doc.body) return;
+
+        if (gespeicherterScroll) {
+          doc.documentElement.scrollTop = gespeicherterScroll;
+          doc.body.scrollTop = gespeicherterScroll;
+        }
+
+        // 💾 Speichern bei Scroll
+        iframe.contentWindow.addEventListener("scroll", () => {
+          const pos = doc.documentElement.scrollTop || doc.body.scrollTop;
+          localStorage.setItem(scrollKey, pos);
+        });
+      } catch (e) {
+        console.warn("📄 Kein Zugriff auf PDF-Dokument für Lesezeichen (Cross-Origin Restriction).", e);
+      }
+    });
   });
 </script>
 
